[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Player_Scores.gd" type="Script" id=1]
[ext_resource path="res://Sprites/2x/Coin.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Player/Jump0-sheet1.png" type="Texture" id=3]
[ext_resource path="res://art/healing bal 03.png" type="Texture" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.882812, 0.0758667, 0.0758667, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.683594, 0.397873, 0.397873, 1 )

[node name="Player Scores" type="CanvasLayer"]
scale = Vector2( 3, 3 )
transform = Transform2D( 3, 0, 0, 3, 0, 0 )
script = ExtResource( 1 )

[node name="Coins Score" type="Node2D" parent="."]
position = Vector2( 24, 32 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Coins Score"]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="Coins Score"]
margin_left = 17.0
margin_top = 1.0
margin_right = 53.0
margin_bottom = 23.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "0"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player lives" type="Node2D" parent="."]
position = Vector2( 76.4983, 25.7492 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Player lives"]
position = Vector2( -5.80594, 5.24408 )
scale = Vector2( 0.21, 0.21 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 98.9865, 32.1284, 196.165, 157.303 )

[node name="Label" type="Label" parent="Player lives"]
margin_left = 20.0
margin_top = 11.0
margin_right = 60.0
margin_bottom = 25.0
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBar" type="Node2D" parent="."]
position = Vector2( 107.101, 24.6849 )
__meta__ = {
"_edit_group_": true
}

[node name="ProgressBar" type="ProgressBar" parent="HealthBar"]
margin_left = 2.0
margin_right = 101.0
margin_bottom = 16.0
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
step = 1.0
value = 100.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Potions_Button" type="TextureButton" parent="."]
margin_left = 560.207
margin_top = 211.257
margin_right = 609.207
margin_bottom = 261.257
action_mode = 0
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 227.217, 33.9411 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 4 )

[node name="Potion_Label" type="Label" parent="Sprite"]
margin_left = 26.0647
margin_top = 9.39905
margin_right = 66.0647
margin_bottom = 23.3991
rect_scale = Vector2( 1.5, 1.5 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Potions_Button" to="." method="_on_Potions_Button_pressed"]
